--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-copy": "0.0.2",
+    "gulp-data": "^1.2.1",
     "gulp-imagemin": "^3.0.3",
     "gulp-postcss": "^6.2.0",
     "gulp-pug": "^3.1.0",
