--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "static-site",
-	"name": "A static site.",
+	"short_name": "elenamolchanova.com",
+	"name": "Elena Molchanova",
 	"icons": [
 		{
       "src": "./img/launcher-icon-1x.png",
